--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,28 @@ jobs:
       - run:
           name: Initialize PBRP repo
           command: |
-          repo init --depth=1 -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0 &&  repo sync
-
+            set -e
+            # update the Docker Image
+            sudo apt-get -qqy update && sudo apt-get -qqy upgrade
+            DIR=$(pwd) && echo $DIR
+            mkdir ~/bin || echo "bin dir exists"
+            PATH=~/bin:$PATH
+            # Get the Repo binary
+            curl --create-dirs -L -o ~/bin/repo -O -L https://github.com/akhilnarang/repo/raw/master/repo
+            chmod a+x ~/bin/repo
+            # Set GitAuth Infos
+            git config --global user.email $GitHubMail
+            git config --global user.name $GitHubName
+            git config --global color.ui true
+            # Repo Init
+            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0
+            # Sync up the Repo Source
+            time repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
+            # Clean up the .repo, no use of it
+            rm -rf .repo
+            # Source Files are Here now
+            ls -la .
+            # This is all for now
 workflows:
   version: 2
   build_and_test:
