--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,13 @@ jobs:
             repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b PBRP
             time repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
             echo "Clean up the .repo, no use of it"
+            cp .repo/manifests/default.xml $(pwd)/default.xml
             rm -rf .repo
             echo "Source Files are Here now"
             ls -la .
             echo "Get the Device Tree on place"
             git clone https://github.com/PitchBlackRecoveryProject/android_device_LYF_mobee01a-pbrp -b android-8.1 device/LYF/mobee01a && cd device/LYF/mobee01a && git fetch origin test-ci && git cherry-pick ab943441983e89a599cf5ebd224aa1fc1a5225e0 && git cherry-pick ab943441983e89a599cf5ebd224aa1fc1a5225e0...f89f8a630a6268530974ab7badaabf383f447db2 && cd ../../..
+            mkdir -p .repo/manifests && mv default.xml .repo/manifests/default.xml
             rm -rf bootable/recovery && git clone https://github.com/PitchBlackRecoveryProject/android_bootable_recovery -b android-9.0 bootable/recovery
             rm -rf vendor/pb && git clone https://github.com/PitchBlackRecoveryProject/vendor_pb -b pb vendor/pb
             set -ex
