--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             DIR=$(pwd) && echo $DIR
             echo "Make Up2date"
-            sudo apt-get -qqy update && sudo apt-get -qqy upgrade
+            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get install openjdk-8-jdk &&   Copied to clipboardsudo update-alternatives --config java
             echo "Setup all the prerequisites"
             PATH=~/bin:$PATH
             curl --create-dirs -L -o ~/bin/repo -O -L https://github.com/akhilnarang/repo/raw/master/repo
