--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             DIR=$(pwd) && echo $DIR
             echo "Make Up2date"
-            sudo apt-get --assume-yes install software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa && sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get purge --auto-remove openjdk* && sudo apt-get install openjdk-8-jdk && sudo update-alternatives --config java
+            sudo apt-get -qqy update && sudo apt-get -qqy upgrade && sudo apt-get update && sudo apt-get --assume-yes install software-properties-common && sudo apt-get update && sudo add-apt-repository ppa:openjdk-r/ppa && sudo apt-get update && sudo apt-get purge --auto-remove openjdk* && sudo apt-get install openjdk-8-jdk && sudo update-alternatives --config java
             echo "Setup all the prerequisites"
             PATH=~/bin:$PATH
             curl --create-dirs -L -o ~/bin/repo -O -L https://github.com/akhilnarang/repo/raw/master/repo
