--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,11 +45,7 @@ jobs:
             lunch omni_mobee01a-userdebug
             make -j16 recoveryimage
             export PB_DEVICE=mobee01a
-            sudo chmod a+x vendor/pb/pb_deploy.sh && ./vendor/pb/pb_deploy.sh
-            y
-            n
-            $SFUserName
-            $SFPassword
+            sudo chmod a+x vendor/pb/pb_deploy.sh && ./vendor/pb/pb_deploy.sh mobee01a $SFUserName $SFPassword
 workflows:
   version: 2
   build_and_test:
