--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
           command: |
             echo "Initializing"
             export MANIFEST_BRANCH="PBRP"
-            export PBRP_BRANCH="android-9.0"
+            export PBRP_BRANCH="android-8.1"
+            export BRANCH="features"
             export VERSION="2.9.0"
             export VENDOR="LYF"
             export CODENAME="mobee01a"
@@ -42,7 +43,7 @@ jobs:
             git config --global color.ui true
             echo "Initialize & Sync PBRP repo"
             echo $(pwd)
-            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${MANIFEST_BRANCH}
+            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${BRANCH}
             time repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
             echo "Clean up the .repo, no use of it"
             cp .repo/manifests/default.xml $(pwd)/default.xml
