--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
             git config --global color.ui true
             echo "Initialize & Sync PBRP repo"
             echo $(pwd)
-            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${BRANCH}
+            repo init --depth=1 -q -u git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b ${MANIFEST_BRANCH}
             time repo sync -c -f -q --force-sync --no-clone-bundle --no-tags -j32
             echo "Clean up the .repo, no use of it"
             cp .repo/manifests/default.xml $(pwd)/default.xml
