--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       # new all-in-one docker image
-      - image: fr3akyphantom/pitchblack-builder:latest
+      - image: fr3akyphantom/droid-builder:latest
     environment:
       MANIFEST_BRANCH: 'twrp-8.1'
       PBRP_BRANCH: 'android-9.0' # bootable_recovery
@@ -11,8 +11,8 @@ jobs:
       VENDOR: 'LYF'
       CODENAME: 'mobee01a'
       BUILD_LUNCH: 'omni_mobee01a-eng'
-      PB_OFFICIAL: 'true'
-      # TEST_BUILD: 'true'
+      #PB_OFFICIAL: 'true'
+      TEST_BUILD: 'true'
     working_directory: /home/builder/pitchblack
     steps:
       - run:
